--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -122,7 +122,7 @@
             <input type="date" id="expires_on_box" name="query_expires_on" class="form-control">
           </div>
 
-          <input type="hidden" id="board_id_box" name="query_board_id" value="@the_board.id"">
+        <input type="hidden" name="query_board_id" id="board_id_input" value="<%= @the_board.id %>">
 
           <div class="d-grid">
             <button class="btn btn-primary">
